github_data_collector/src/data/issue_comment/tideways_php-xhprof-extension.txt
We have tried to use tideways xhprof on one of our servers, which for reasons outside our immediate control still runs on PHP 7.1.

The extension runs, but on every third request (as far as we could determine) we get a segfault. PHP is setup with FPM, and as far as I can see we had two children running. So every third request could well be the second request to a given FPM child. Apparently it doesn't matter which script we are calling, the same script can run fine and produce a profile and then segfault the next time.
We tried with version 4.1.7 (from ubuntu PPA of Ondrej Sury) and 5.0.1 downloaded from github release page. Both result in a segfault, although with different stack traces.

Stack trace from 4.1.7:
```
#0  0x0000563291c436c8 in zend_hash_destroy ()
#1  0x00007ff33bf15f54 in ?? () from /usr/lib/php/20160303/tideways.so
#2  0x00007ff33bf1cad2 in zif_tideways_enable () from /usr/lib/php/20160303/tideways.so
#3  0x0000563291cd51ba in ?? ()
#4  0x0000563291c7c11b in execute_ex ()
#5  0x0000563291cd73a0 in zend_execute ()
#6  0x0000563291c32313 in zend_execute_scripts ()
#7  0x0000563291bce310 in php_execute_script ()
#8  0x0000563291aac189 in main ()
```

Stack trace from 5.0.1:
```
#0  0x00007f4c0290c3cb in tideways_xhprof_execute_ex () from /usr/lib/tideways_xhprof/tideways_xhprof-7.1.so
#1  0x000055bc574e4ecb in zend_call_function ()
#2  0x000055bc575138a9 in zend_call_method ()
#3  0x000055bc573f010e in zif_spl_autoload_call ()
#4  0x00007f4c0290d166 in tideways_xhprof_execute_internal () from /usr/lib/tideways_xhprof/tideways_xhprof-7.1.so
#5  0x000055bc574e50d3 in zend_call_function ()
#6  0x000055bc574e5471 in zend_lookup_class_ex ()
#7  0x000055bc574e5e28 in zend_fetch_class_by_name ()
#8  0x000055bc57543d09 in ?? ()
#9  0x000055bc5753f11b in execute_ex ()
#10 0x00007f4c0290c287 in tideways_xhprof_execute_ex () from /usr/lib/tideways_xhprof/tideways_xhprof-7.1.so
#11 0x000055bc575947dc in ?? ()
#12 0x000055bc5753f11b in execute_ex ()
#13 0x00007f4c0290c402 in tideways_xhprof_execute_ex () from /usr/lib/tideways_xhprof/tideways_xhprof-7.1.so
#14 0x000055bc5759821a in ?? ()
#15 0x000055bc5753f11b in execute_ex ()
#16 0x00007f4c0290c402 in tideways_xhprof_execute_ex () from /usr/lib/tideways_xhprof/tideways_xhprof-7.1.so
#17 0x000055bc57597dae in ?? ()
#18 0x000055bc5753f11b in execute_ex ()
#19 0x00007f4c0290c287 in tideways_xhprof_execute_ex () from /usr/lib/tideways_xhprof/tideways_xhprof-7.1.so
#20 0x000055bc57594eac in ?? ()
#21 0x000055bc5753f11b in execute_ex ()
#22 0x00007f4c0290c287 in tideways_xhprof_execute_ex () from /usr/lib/tideways_xhprof/tideways_xhprof-7.1.so
#23 0x000055bc57594eac in ?? ()
#24 0x000055bc5753f11b in execute_ex ()
#25 0x00007f4c0290c287 in tideways_xhprof_execute_ex () from /usr/lib/tideways_xhprof/tideways_xhprof-7.1.so
#26 0x000055bc5759a3a0 in zend_execute ()
#27 0x000055bc574f5313 in zend_execute_scripts ()
#28 0x000055bc57491310 in php_execute_script ()
#29 0x000055bc5736f189 in main ()
```

As the stack traces are quite different I am not entirely sure it is the same issue or not, but from the outside view it shows the exact same symptoms.

My knowledge of gdb is pretty much exhausted at this point, so if we can provide more useful details, please advice us. I will leave the relevant stack traces lying around for the time being.
I've upgraded my desktop from Windows 7 to 10, without any changes to my portable Apache/MySQL/PHP web stack.

After the update having tideways_xhprof binary enabled started to crash Apache on general browsing of PHP pages (not trying to profile) with following message:

```
AH00428: Parent: child process 1700 exited with status 3221225477 -- Restarting.
```

Binary version `php_tideways_xhprof-5.0.0-master-39806cc8-7.3-vc15-x86_64.dll`

Any pointers how can I try tweak or troubleshoot this?
helps getting started on macOS using `brew`
I pushed upgrade to 5 beta 3 (for php 7.2) https://github.com/alpinelinux/aports/commit/2d7cbaa7a0838d0eab7176e61bbb3874892020f0

But build for x86 (not 64 bit) fails, log https://build.alpinelinux.org/buildlogs/build-edge-x86/testing/php7-tideways_xhprof/php7-tideways_xhprof-5.0_beta3-r1.log
```
In file included from /home/buildozer/aports/testing/php7-tideways_xhprof/src/php-xhprof-extension-5.0-beta3/tracing.h:1,
                 from /home/buildozer/aports/testing/php7-tideways_xhprof/src/php-xhprof-extension-5.0-beta3/tideways_xhprof.c:13:
/home/buildozer/aports/testing/php7-tideways_xhprof/src/php-xhprof-extension-5.0-beta3/timer.h: In function 'time_milliseconds':
/home/buildozer/aports/testing/php7-tideways_xhprof/src/php-xhprof-extension-5.0-beta3/timer.h:79:13: error: a label can only be part of a statement and a declaration is not a statement
             int64_t ret;
             ^~~~~~~
In file included from /home/buildozer/aports/testing/php7-tideways_xhprof/src/php-xhprof-extension-5.0-beta3/tracing.h:1,
                 from /home/buildozer/aports/testing/php7-tideways_xhprof/src/php-xhprof-extension-5.0-beta3/tracing.c:11:
/home/buildozer/aports/testing/php7-tideways_xhprof/src/php-xhprof-extension-5.0-beta3/timer.h: In function 'time_milliseconds':
/home/buildozer/aports/testing/php7-tideways_xhprof/src/php-xhprof-extension-5.0-beta3/timer.h:79:13: error: a label can only be part of a statement and a declaration is not a statement
             int64_t ret;
             ^~~~~~~
make: *** [Makefile:196: tracing.lo] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Makefile:194: tideways_xhprof.lo] Error 1
```

Any idea what's wrong?